src/assets/scss/_apartments.scss
@import "./variables";

@media (any-hover: hover) {
  .apartments .apartments-panel .panel-menu {
    .panel-menu-item:hover {
      background: $primaryColor;
      color:      $white;
      > span {
        border-bottom: 2px solid $white;
        border-left:   2px solid $white;
      }
    }
    .filter:hover {
      .filter-list {
        visibility: visible;
        opacity:    1;
      }
    }
    .filter .filter-item:hover {
      .item-sublist {
        visibility: visible;
        opacity:    1;
      }
    }
    .filter .filter-item .item-sublist .sublist-item:hover {
      color: $primaryColor;
    }
  }
  .apartments .apartments-panel .panel-menu .panel-menu-item {
    .filter-item:hover {
      border-left: 7px solid $primaryColor;
      > span {
        border-bottom: 2px solid $primaryColor;
        border-left:   2px solid $primaryColor;
      }
    }
  }
}

.apartments {
  h5 {
    font-weight:   600;
    margin-bottom: 13px;
  }
  p {
    margin-bottom: 10px;
  }
  &-panel {
    .panel-menu {
      display:         flex;
      justify-content: space-between;
      align-items:     flex-start;
      &-list {
        display:   flex;
        flex-wrap: wrap;
        max-width: 1110px;
      }
      &-item {
        padding:        11px 20px;
        font-size:      1.25rem;
        text-transform: uppercase;
        box-shadow:     0 3px 3px 0 rgba(0, 0, 0, 0.16);
        border-radius:  50px;
        background:     $white;
        cursor:         pointer;
        margin:         0 13px 2rem 0;
        &:active {
          background: $secondaryColor !important;
          color:      $white;
          span {
            border-bottom: 2px solid $white;
            border-left:   2px solid $white;
          }
        }
        &.filter {
          display:         flex;
          justify-content: space-between;
          align-items:     center;
          position:        relative;
          span {
            width:         10px;
            height:        10px;
            border-bottom: 2px solid $secondaryColor;
            border-left:   2px solid $secondaryColor;
            transform:     rotate(-45deg) translate(0, -50%);
            margin-left:   1rem;
          }
          .filter-list {
            visibility:    hidden;
            opacity:       0;
            position:      absolute;
            top:           116%;
            left:          0;
            width:         15.23vw;
            background:    $white;
            border-radius: 20px;
            padding:       .95rem 0;
            z-index:       10;
            box-shadow:    0 3px 6px 0 rgba(0, 0, 0, 0.16);
          }
          .filter-item {
            padding:         13px;
            display:         flex;
            justify-content: space-between;
            align-items:     center;
            border-left:     7px solid $white;
            position:        relative;
            span {
              transform: rotate(-135deg) translate(0, 0);
            }
            .item-sublist {
              visibility:    hidden;
              opacity:       0;
              position:      absolute;
              top:           -30%;
              left:          103%;
              width:         20vw;
              background:    $white;
              padding:       .95rem;
              border-radius: 20px;
              box-shadow:    0 3px 6px 0 rgba(0, 0, 0, 0.16);
              .sublist-item {
                padding: 13px;
                &.active {
                  color: $secondaryColor;
                }
              }
            }
          }
        }
      }
      .search {
        .form-search {
          box-shadow:    0 3px 3px 0 rgba(0, 0, 0, 0.16);
          border-radius: 50px;
          display:       flex;
          align-items:   center;
          padding:       .7rem 1.95rem;
          input {
            all:       unset;
            font-size: 1.25rem;
            &::placeholder {
              font-size: 1.25rem;
            }
          }
          img {
            width:  24px;
            height: 24px;
          }
        }
      }
    }
  }
  &-item {
    max-width: 448px;
    .btn {
      padding: 13px 18px;
    }
    .item-image {
      margin-bottom: 13px;
      position:      relative;
      .discount, .favorites {
        position:      absolute;
        right:         0;
        color:         $white;
        font-size:     1.125rem;
        font-weight:   600;
        border-radius: 30px 0 0 30px;
        text-align:    center;
        cursor:        pointer;
      }
      .discount {
        top:        28px;
        width:      18.4%;
        background: $primaryColor;
        padding:    1.46% 0;
      }
      .favorites {
        display:         flex;
        justify-content: center;
        top:             68px;
        width:           12.3%;
        background:      $secondaryColor;
        padding:         1.8% 0;
        cursor:          pointer;
        svg {
          width:  33%;
          height: 1%;
        }
      }
    }
    .item-description {
      .description-price {
        display:         flex;
        justify-content: space-between;
        align-items:     center;
        flex-wrap:       wrap;
        p {
          display: flex;
          justify-content: space-between;
          align-items:     center;
          flex-wrap:       wrap;
        }
        span {
          font-size:   1.5rem;
          font-weight: 600;
        }
        .old-price {
          text-decoration: line-through;
          margin-right:    10px;
        }
        .new-price {
          color: $black;
        }
      }
    }
  }
}

@media screen and (max-width: 991.98px) {

}

@media screen and (max-width: 567px) {

}

